--- a/src/App.css
+++ b/src/App.css
@@ -574,19 +574,6 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
 
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .modal-overlay.bottom-left {
   align-items: flex-end;
   justify-content: flex-start;
@@ -630,31 +617,6 @@
   bottom: 30px;
 }
 
-.selection-modal {
-  background-color: white;
-  border-radius: 12px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  overflow-y: auto;
-  animation: popup-appear 0.3s forwards;
-  width: 90%;
-  max-width: 250px;
-  position: relative;
-}
-
-.task-modal-container {
-  background-color: white;
-  width: 90%;
-  max-width: 600px;
-  min-height: auto;
-  max-height: 90vh;
-  border-radius: 12px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  overflow-y: auto;
-  transform: scale(0.9);
-  opacity: 0;
-  animation: popup-appear 0.3s forwards;
-  position: relative;
-}
 
 /* Animation d'entrée depuis la gauche */
 @keyframes slide-in {
@@ -737,7 +699,7 @@
   max-height: 0;
   opacity: 0;
   padding: 0 10px;
-  border-top: 0px solid transparent;
+  border-top: solid transparent;
 }
 
 .todo-form-details.show {
@@ -928,7 +890,7 @@
   gap: 20px;
 }
 
-category-selector {
+.category-selector {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
