--- a/src/components/CategoryForm/CategoryForm.css
+++ b/src/components/CategoryForm/CategoryForm.css
@@ -28,6 +28,9 @@
 
 .color-selector {
     display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 5px;
