--- a/src/components/CategoryForm/CategoryForm.css
+++ b/src/components/CategoryForm/CategoryForm.css
@@ -12,7 +12,7 @@
     color: #333;
     text-align: left;
 }
- 
+
 .category-input,
 .category-textarea {
     width: 100%;
@@ -80,13 +80,19 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
 }
 
 .category-item {
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #eee;
+    padding: 5px;
+    border-bottom: none;
+    margin-bottom: 5px;
 }
 
 .category-badge {
@@ -94,7 +100,6 @@
     padding: 3px 10px;
     border-radius: 20px;
     font-size: 14px;
-    margin-right: 10px;
 }
 
 .category-description {
