--- a/src/App.css
+++ b/src/App.css
@@ -194,25 +194,6 @@
   white-space: nowrap;
 }
 
-.todo-details-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #888;
-  font-size: 12px;
-  padding: 5px;
-}
-
-.todo-details h4 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: #4caf50;
-}
-
-.todo-description {
-  margin-bottom: 10px;
-  white-space: pre-wrap;
-}
 
 .todo-location-detail {
   color: #666;
@@ -438,12 +419,6 @@
   font-weight: 300;
 }
 
-.todo-categories {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 5px;
-}
 
 .todo-action-button {
   display: inline-flex;
@@ -639,34 +614,7 @@
   }
 }
 
-.task-modal-container .todo-textarea {
-  width: 100%;
-  height: 25vh;
-  min-height: 120px;
-  max-height: 25vh;
-  box-sizing: border-box;
-  resize: none;
-  overflow-y: auto;
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-family: inherit;
-}
 
-.task-modal-container .modal-body {
-  padding: 1.5rem 2rem;
-}
-
-.task-modal-container .todo-form {
-  padding: 1.25rem;
-  margin: 0;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-}
-
-.task-modal-container .form-group {
-  margin-bottom: 1.25rem;
-}
 
 /* Style pour l'en-tête */
 .modal-header {
@@ -709,22 +657,8 @@
   border-top: 1px solid rgba(0,0,0,0.1);
 }
 
-.todo-details {
-  overflow: hidden;
-  transition: all 0.9s cubic-bezier(0.19, 1, 0.22, 1);
-  max-height: 0;
-  opacity: 0;
-  margin-top: 0;
-}
 
-.todo-details.show {
-  max-height: 1000px;
-  opacity: 1;
-  margin-top: 10px;
-  background-color: #f5f5f5;
-  border-radius: 8px;
-  padding: 15px;
-}
+
 
 .option-button {
   display: flex;
@@ -1201,4 +1135,29 @@
 
 .filter-option.clear-filters.disabled:hover {
   background-color: #f0f0f0 !important;
+}
+
+/* Commun */
+.tooltip-text {
+  visibility: hidden;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 6px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  white-space: nowrap;
+  font-size: 14px;
+  min-width: 120px;
+}
+
+/* Autre */
+.form-group.echeance {
+  width: 50%;
 }
