--- a/src/components/CategoryItem/CategoryItem.css
+++ b/src/components/CategoryItem/CategoryItem.css
@@ -47,3 +47,13 @@
     border-style: solid;
     border-color: #555 transparent transparent transparent;
 }
+
+.clickable-category {
+    cursor: pointer;
+    transition: transform 0.1s, opacity 0.1s;
+}
+
+.clickable-category:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
+}
