--- a/src/components/CategoryForm/CategoryForm.css
+++ b/src/components/CategoryForm/CategoryForm.css
@@ -70,6 +70,7 @@
     padding: 10px 15px;
     background-color: #4caf50;
     width: 100%;
+    height: 100%;
     color: white;
     border: none;
     border-radius: 4px;
@@ -324,3 +325,4 @@
     position: relative;
     z-index: 10000;
 }
+
