--- a/src/components/modals/TaskModal/TaskModal.css
+++ b/src/components/modals/TaskModal/TaskModal.css
@@ -1,16 +1,17 @@
 .task-modal-container {
     background-color: white;
-    width: 90%;
+    width: 95%;
     max-width: 600px;
     min-height: auto;
-    max-height: 90vh;
+    max-height: 95vh;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     overflow-y: auto;
-    transform: scale(0.9);
+    transform: scale(0.95);
     opacity: 0;
     animation: popup-appear 0.3s forwards;
     position: relative;
+    padding-bottom: 20px;
 }
 
 .task-modal-container .todo-textarea {
